--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <a href="https://github.com/NigoraFayzullaeva/TheWitcher.git" class="view-more">View more</a>
     </div>
     <!--bg-img------------->
-    <img src="img/work-3.png">
+    <img src="img/3w.png">
       
     </div>
     <!--portfolio-box-2-------->
@@ -107,7 +107,7 @@
     <a href="https://github.com/NigoraFayzullaeva/Waxom.git" class="view-more">View more</a>
     </div>
     <!--bg-img------------->
-    <img src="img/work-5.png">
+    <img src="img/3w.png">
     </div>
     <!--portfolio-box-3-------->
     <div class="p-box">
@@ -118,7 +118,7 @@
     <a href="#"  class="view-more">View more</a>
     </div>
     <!--bg-img------------->
-    <img src="img/work-2.png">
+    <img src="img/2w.png">
     </div>
     <!--portfolio-box-4-------->
     <div class="p-box">
@@ -129,7 +129,7 @@
     <a href="#" class="view-more">View more</a>
     </div>
     <!--bg-img------------->	
-    <img src="img/work-1.png">
+    <img src="img/1w.png">
     </div>
     <!--portfolio-box-5-------->
     <div class="p-box">
@@ -140,7 +140,7 @@
     <a href="https://tashkentbarbershop.com/"  class="view-more">View more</a>
     </div>
     <!--bg-img------------->	
-    <img src="img/work-4.png">
+    <img src="img/p4.png">
     </div>
     <!--portfolio-box-6-------->
     <div class="p-box">
@@ -151,7 +151,7 @@
     <a href="https://github.com/NigoraFayzullaeva/DiceGame.git" class="view-more">View more</a>
     </div>
     <!--bg-img------------->	
-    <img src="img/work-6.png">
+    <img src="img/p6.png">
     </div>
       
     </div>
