--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
             <li><a href="#services" data-after="Service">Services</a></li>
-            <li><a href="#projects" data-after="Projects">Projects</a></li>
+            <li><a href="#portfolio" data-after="Projects">Projects</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
           </ul>
@@ -39,7 +39,7 @@
         <h1>Hey there, <span></span></h1>
         <h1>My Name is <span></span></h1>
         <h1>Nigora <span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        <a href="#portfolio" type="button" class="cta">Portfolio</a>
       </div>
     </div>
   </section>
