--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <a href="https://github.com/NigoraFayzullaeva/Waxom.git" class="view-more">View more</a>
     </div>
     <!--bg-img------------->
-    <img src="img/3w.png">
+    <img src="img/prowaxom.png">
     </div>
     <!--portfolio-box-3-------->
     <div class="p-box">
