--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni! Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!</p>
+        <p>I'm a Full-Stack Developer who is passionate about making open-source more accessible, creating technology to elevate people, and building community. Some technologies I enjoy working with include ReactJS, Jamstack (JavaScript, APIs + Markup).</p>
         <a href="Ni_Fayzullaeva_resume.pdf" class="cta" download="">Download Resume</a>
       </div>
     </div>
@@ -244,7 +244,7 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
           <div class="contact-info">
             <h1>Phone</h1>
-            <h2>+998 93 539 8448</h2>
+            <h2>+90 531 326 1002</h2>
           </div>
         </div>
         <div class="contact-item">
@@ -258,7 +258,7 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>Uzbekistan, Tashkent</h2>
+            <h2>Turkey, Antalya</h2>
           </div>
         </div>
       </div>
@@ -273,7 +273,7 @@
       <h2>Get in touch</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="tel:+998935398448"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></a>
+          <a href="tel:+5313261002"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></a>
         </div>
         <div class="social-item">
           <a href="email:nivelikorodova@gmail.com"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></a>
@@ -288,7 +288,7 @@
           <a href="https://github.com/NigoraFayzullaeva/"><img src="https://img.icons8.com/bubbles/100/000000/github.png"/></a>
         </div>
       </div>
-      <p>Copyright © 2020 Nigora. All rights reserved</p>
+      <p>Copyright © 2021 Nigora. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
