--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name='freelancehunt' content='eaaf628eee99680' />
   <link rel="icon" type="image/ico" href="img/favicon.ico" sizes="32x32">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>Nigora's Codes</title>
 </head>
+
 <body>
   <!-- Header -->
   <section id="header">
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero"><h1><span>Ni</span>gora<span>'s</span></h1></a>
+          <a href="#hero">
+            <h1><span>Ni</span>gora<span>'s</span></h1>
+          </a>
         </div>
         <div class="nav-list">
-          <div class="hamburger"><div class="bar"></div></div>
+          <div class="hamburger">
+            <div class="bar"></div>
+          </div>
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
             <li><a href="#services" data-after="Service">Services</a></li>
@@ -55,24 +61,28 @@
       </div>
       <div class="service-bottom">
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/office.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/office.png" /></div>
           <h2>Web Design</h2>
-          <p>Web design  <br> App Design <br> Branding <br> Print Media.</p>
+          <p>Web design <br> App Design <br> Branding <br> Print Media</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/internet.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/internet.png" /></div>
           <h2>Web Development</h2>
-          <p>Web design  <br> App Design <br> Branding <br> Print Media.</p>
+          <p>Web development <br> CMS <br> e-Commerce <br> Apps</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/bullish.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/bullish.png" /></div>
           <h2>Marketing</h2>
-          <p>Web design  <br> App Design <br> Branding <br> Print Media.</p>
+          <p>Social Media
+            <br> SEO <br> Pay Per Click
+            <br> Digital Copyrighting
+          </p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/trust.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/trust.png" /></div>
           <h2>Support</h2>
-          <p>I provide proper consultation, testing and improvement facilities to customers for a specific period of time to help them out in issues they face.</p>
+          <p>I provide proper consultation, testing and improvement facilities to customers for a specific period of
+            time to help them out in issues they face.</p>
         </div>
       </div>
     </div>
@@ -87,76 +97,76 @@
     </div>
     <!--portfolio-container------------>
     <div class="p-container">
-    <!--portfolio-box-1-------->
-    <div class="p-box">
-    <!--text--------->
-    <div class="overlay-text">
-    <h1>The Witcher</h1>
-    <p>Html5/Css3/Js</p>	
-    <a href="https://github.com/NigoraFayzullaeva/TheWitcher.git" class="view-more">View more</a>
+      <!--portfolio-box-1-------->
+      <div class="p-box">
+        <!--text--------->
+        <div class="overlay-text">
+          <h1>The Witcher</h1>
+          <p>Html5/Css3/Js</p>
+          <a href="https://github.com/NigoraFayzullaeva/TheWitcher.git" class="view-more">View more</a>
+        </div>
+        <!--bg-img------------->
+        <img src="img/3w.png">
+
+      </div>
+      <!--portfolio-box-2-------->
+      <div class="p-box">
+        <!--text--------->
+        <div class="overlay-text">
+          <h1>Waxom Landing Page</h1>
+          <p>Client Project</p>
+          <a href="https://github.com/NigoraFayzullaeva/Waxom.git" class="view-more">View more</a>
+        </div>
+        <!--bg-img------------->
+        <img src="img/prowaxom.png">
+      </div>
+      <!--portfolio-box-3-------->
+      <div class="p-box">
+        <!--text--------->
+        <div class="overlay-text">
+          <h1>Portfolio Site</h1>
+          <p>Client Project</p>
+          <a href="https://github.com/NigoraFayzullaeva" class="view-more">View more</a>
+        </div>
+        <!--bg-img------------->
+        <img src="img/2w.png">
+      </div>
+      <!--portfolio-box-4-------->
+      <div class="p-box">
+        <!--text--------->
+        <div class="overlay-text">
+          <h1>Novateg Digital Agency</h1>
+          <p>My Group Team Agency</p>
+          <a href="https://github.com/NigoraFayzullaeva" class="view-more">View more</a>
+        </div>
+        <!--bg-img------------->
+        <img src="img/1w.png">
+      </div>
+      <!--portfolio-box-5-------->
+      <div class="p-box">
+        <!--text--------->
+        <div class="overlay-text">
+          <h1>Tashkent BarberShop</h1>
+          <p>Client Project</p>
+          <a href="https://tashkentbarbershop.com/" class="view-more">View more</a>
+        </div>
+        <!--bg-img------------->
+        <img src="img/p4.png">
+      </div>
+      <!--portfolio-box-6-------->
+      <div class="p-box">
+        <!--text--------->
+        <div class="overlay-text">
+          <h1>Dicee Game</h1>
+          <p>Game</p>
+          <a href="https://github.com/NigoraFayzullaeva/DiceGame.git" class="view-more">View more</a>
+        </div>
+        <!--bg-img------------->
+        <img src="img/p6.png">
+      </div>
+
     </div>
-    <!--bg-img------------->
-    <img src="img/3w.png">
-      
-    </div>
-    <!--portfolio-box-2-------->
-    <div class="p-box">
-      <!--text--------->
-    <div class="overlay-text">
-    <h1>Waxom Landing Page</h1>
-    <p>Client Project</p>	
-    <a href="https://github.com/NigoraFayzullaeva/Waxom.git" class="view-more">View more</a>
-    </div>
-    <!--bg-img------------->
-    <img src="img/prowaxom.png">
-    </div>
-    <!--portfolio-box-3-------->
-    <div class="p-box">
-    <!--text--------->
-    <div class="overlay-text">
-    <h1>Portfolio Site</h1>
-    <p>Client Project</p>	
-    <a href="#"  class="view-more">View more</a>
-    </div>
-    <!--bg-img------------->
-    <img src="img/2w.png">
-    </div>
-    <!--portfolio-box-4-------->
-    <div class="p-box">
-    <!--text--------->
-    <div class="overlay-text">
-    <h1>Novateg Digital Agency</h1>
-    <p>My Group Team Agency</p>	
-    <a href="#" class="view-more">View more</a>
-    </div>
-    <!--bg-img------------->	
-    <img src="img/1w.png">
-    </div>
-    <!--portfolio-box-5-------->
-    <div class="p-box">
-    <!--text--------->
-    <div class="overlay-text">
-    <h1>Tashkent BarberShop</h1>
-    <p>Client Project</p>	
-    <a href="https://tashkentbarbershop.com/"  class="view-more">View more</a>
-    </div>
-    <!--bg-img------------->	
-    <img src="img/p4.png">
-    </div>
-    <!--portfolio-box-6-------->
-    <div class="p-box">
-    <!--text--------->
-    <div class="overlay-text">
-    <h1>Dicee Game</h1>
-    <p>Game</p>	
-    <a href="https://github.com/NigoraFayzullaeva/DiceGame.git" class="view-more">View more</a>
-    </div>
-    <!--bg-img------------->	
-    <img src="img/p6.png">
-    </div>
-      
-    </div>
-    </section>
+  </section>
   <!-- <section id="projects">
     <div class="projects container">
       <div class="projects-header">
@@ -229,7 +239,9 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
-        <p>I'm a Full-Stack Developer who is passionate about making open-source more accessible, creating technology to elevate people, and building community. Some technologies I enjoy working with include ReactJS, Jamstack (JavaScript, APIs + Markup).</p>
+        <p>I'm a Full-Stack Developer who is passionate about making open-source more accessible, creating technology to
+          elevate people, and building community. Some technologies I enjoy working with include ReactJS, Jamstack
+          (JavaScript, APIs + Markup).</p>
         <a href="Ni_Fayzullaeva_resume.pdf" class="cta" download="">Download Resume</a>
       </div>
     </div>
@@ -239,24 +251,26 @@
   <!-- Contact Section -->
   <section id="contact">
     <div class="contact container">
-      <div><h1 class="section-title">Contact <span>info</span></h1></div>
+      <div>
+        <h1 class="section-title">Contact <span>info</span></h1>
+      </div>
       <div class="contact-items">
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
           <div class="contact-info">
             <h1>Phone</h1>
             <h2>+90 531 326 1002</h2>
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
-            <h2>nivelikorodova@gmail.com</h2>
+            <h2>nifayzi@gmail.com</h2>
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
             <h2>Turkey, Antalya</h2>
@@ -270,23 +284,28 @@
   <!-- Footer -->
   <section id="footer">
     <div class="footer container">
-      <div class="brand"><h1><span>Ni</span>gora<span>'s</span></h1></div>
+      <div class="brand">
+        <h1><span>Ni</span>gora<span>'s</span></h1>
+      </div>
       <h2>Get in touch</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="tel:+5313261002"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></a>
+          <a href="tel:+5313261002"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></a>
         </div>
         <div class="social-item">
-          <a href="email:nivelikorodova@gmail.com"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></a>
+          <a href="email:nifayzi.com"><img
+              src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
+          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://www.linkedin.com/in/nigora-fayzullaeva-744954190/"><img src="https://img.icons8.com/bubbles/100/000000/linkedin.png"/></a>
+          <a href="https://www.linkedin.com/in/nigora-fayzullaeva-744954190/"><img
+              src="https://img.icons8.com/bubbles/100/000000/linkedin.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://github.com/NigoraFayzullaeva/"><img src="https://img.icons8.com/bubbles/100/000000/github.png"/></a>
+          <a href="https://github.com/NigoraFayzullaeva/"><img
+              src="https://img.icons8.com/bubbles/100/000000/github.png" /></a>
         </div>
       </div>
       <p>Copyright © 2021 Nigora. All rights reserved</p>
@@ -295,4 +314,5 @@
   <!-- End Footer -->
   <script src="./app.js"></script>
 </body>
+
 </html>
