--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
-        <p>I'm a Full-Stack Developer who is passionate about making open-source more accessible, creating technology to
+        <p>I'm a Full-Stack/iOS Developer who is passionate about making open-source more accessible, creating technology to
           elevate people, and building community. Some technologies I enjoy working with include ReactJS, Jamstack
           (JavaScript, APIs + Markup).</p>
-        <a href="Ni_Fayzullaeva_resume.pdf" class="cta" download="">Download Resume</a>
+        <a href="NigoraFayzullaevaResume.pdf" class="cta" download="">Download Resume</a>
       </div>
     </div>
   </section>
